--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 <head>
     <title>Example 01.03 - Materials and light</title>
     <script type="text/javascript" src="../libs/three.js"></script>
-    <script type="text/javascript" src="../libs/stats.js"></script>
-    <script type="text/javascript" src="../libs/dat.gui.js"></script>
+    <!-- <script type="text/javascript" src="../libs/stats.js"></script> -->
+    <!-- <script type="text/javascript" src="../libs/dat.gui.js"></script> -->
     <style>
         body {
             /* set margin to 0 and overflow to hidden, to go fullscreen */
