--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         camera.position.z = 30;
         camera.lookAt(scene.position);
 
-        // add spotlight for the shadows
+        //  spotlight for the shadows
         var spotLight = new THREE.SpotLight(0xffffff);
         spotLight.position.set(-40, 60, -10);
         spotLight.castShadow = true;
